# func_adl_local

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
func_adl_local/: __init__.py  functions.py
